# difflake

./: .gitignore  CHANGELOG.md  LICENSE  README.md  difflake.yaml.example  load_test.py  pyproject.toml  test_real_data.py
.github/workflows/: ci.yml  publish.yml
difflake/: __init__.py  cli.py  connection.py  core.py  logging_setup.py  models.py
difflake/differ/: __init__.py  row_differ.py  schema_differ.py  stats_differ.py
difflake/reporters/: __init__.py  cli_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
examples/: run_demo.py
tests/: conftest.py  test_difflake.py
